--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,7 @@
   margin: 50px;
   font-size: 100px;
   cursor: pointer;
+  user-select: none;
 }
 #emoji:active {
   transform: translateY(-10px);
