--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   }
 }
 
-.App-header {
+body {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -51,4 +51,26 @@
   font-size: 50px;
   font-weight: bold;
   margin: 20px;
+}
+
+#chartdiv {
+  width: 700px;
+  height: 500px;
+  margin: 30px;
+}
+
+.eventPageButton, .ReloadButton{
+  font-size: 16px;
+  font-weight: bold;
+  border: 1px solid white;
+  background-color: #282c34;
+  color: white;
+  padding: 15px;
+  border-radius: 4px;
+  margin: 10px;
+}
+
+.eventPage {
+  display: flex;
+  justify-content: flex-end;
 }
